# kis-cli

./: .gitignore  AGENTS.md  Makefile  README.md
.claude/: STEERING.md  TASKS.md
.context/: STEERING.md  TASKS.md
.githooks/: pre-commit  pre-push
.github/workflows/: ci.yml  release-build.yml
docs/: SPEC.md  development-checks.md  reference.md
rust/: Cargo.toml
rust/kis-api/: Cargo.toml
rust/kis-api/src/: client.rs  lib.rs
rust/kis-api/src/domestic/: balance.rs  chart.rs  finance.rs  info.rs  market.rs  mod.rs  order.rs  overtime.rs  price.rs  quote.rs
rust/kis-api/src/overseas/: balance.rs  exchange.rs  order.rs  price.rs
rust/kis-cli/: Cargo.toml
rust/kis-cli/src/: cli.rs  main.rs  render.rs  runtime.rs
rust/kis-cli/tests/: cli_smoke.rs  e2e_virtual_smoke.rs
rust/kis-core/: Cargo.toml
rust/kis-core/src/: api_client.rs  auth.rs  client.rs  config.rs  error.rs  lib.rs  ws.rs
rust/kis-core/src/domestic/: balance.rs  chart.rs  finance.rs  info.rs  market.rs  mod.rs  order.rs  overtime.rs  price.rs  quote.rs
rust/kis-core/src/overseas/: balance.rs  chart.rs  info.rs  market.rs  mod.rs  order.rs  price.rs  quote.rs
