[package]
name = "kis-api"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
kis-core = { path = "../kis-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"

[dev-dependencies]
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
