[package]
name = "kis-cli"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "kis"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["derive"] }
dirs = "6.0.0"
kis-api = { path = "../kis-api" }
kis-core = { path = "../kis-core" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
unicode-width = "0.2.0"

[dev-dependencies]
tempfile = "3.18.0"
