[package]
name = "kis-core"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-trait = "0.1.88"
chrono = { version = "0.4.40", features = ["clock"] }
dirs = "6.0.0"
futures-util = "0.3.31"
reqwest = { version = "0.12.14", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["sync", "time"] }
tokio-tungstenite = { version = "0.24.0", default-features = false, features = ["connect", "handshake"] }

[dev-dependencies]
tempfile = "3.18.0"
tokio = { version = "1.44.1", features = ["macros", "rt-multi-thread"] }
